<resources>
    <string name="app_name">To do list</string>
    <string name="label_add_task">Criar Tarefa</string>
    <string name="lablel_title">Título</string>
    <string name="lable_descricao">Descrição</string>
    <string name="lable_date">Data</string>
    <string name="lable_hour">Hora</string>
    <string name="tarefas_de_hoje">Tarefas de Hoje</string>
    <string name="label_description_task">Nova Tarefa</string>
    <string name="editar_menu">Editar</string>
    <string name="deletar">Deletar</string>
</resources>